# SpotMicroAI

./: CMakeLists.txt  mkdocs.yml  package.xml
Core/: example_automatic_gait.py  example_gamepad.py  example_leg_motion.py  gym_test.py  kinematicMotion.py  kinematics.py  setup.py  spotmicroai.py  thinputs.py
JetsonNano/: boot.py  network.py  servos.py
launch/: showmodel.launch
robot/: run_realbot.py  run_simulation.py  run_training.py
robot/core/: kinematics.py  motions.py
robot/simulation/: environment.py  example_automatic_gait.py  example_gamepad.py  example_leg_motion.py  spotmicroai.py
robot/training/gym_spotmicroai/envs/: spotmicroai_env.py
spotmicroai/: CMakeLists.txt  package.xml
spotmicroai_control/: CMakeLists.txt  package.xml
spotmicroai_description/: CMakeLists.txt  package.xml
spotmicroai_description/urdf/: spotmicroai.urdf.xacro
spotmicroai_sim/: CMakeLists.txt  package.xml
urdf/: spotmicroai_gen.urdf.xml
