<?xml version="1.0"?>
<package format="2">
  <name>spotmicroai</name>
  <version>0.0.0</version>
  <description>SpotMicroAI ROS Package</description>

  <maintainer email="florian.wilk@gmail.com">Florian Wilk</maintainer>

  <license>TODO</license>


  <url type="website">https://github.com/FlorianWilk/SpotMicroAI</url>
  <author email="florian.wilk@gmail.com">Florian Wilk</author> 

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <export>

  </export>
</package>
