cmake_minimum_required(VERSION 2.8.3)
project(spotmicroai_description)

## is used, also find other catkin packages
find_package(catkin REQUIRED)
catkin_package(
#  INCLUDE_DIRS include
#  LIBRARIES spotmicroai_description
#  CATKIN_DEPENDS other_catkin_pkg
#  DEPENDS system_lib
)

include_directories(
# include
# ${catkin_INCLUDE_DIRS}
)
